Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36257

mariadbd: 10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc:14921: int ha_innobase::info_low(uint, bool): Assertion `ib_table->stat_initialized()' failed.

    XMLWordPrintable

Details

    Description

      Problem hit when RQG testing on
      origin/10.11-MDEV-29445 4e0a1578a477a3ac349f931c03de1a3e1a1c4acf 2025-03-07T14:16:53+02:00
      Per Marko: We can hit that problem on main trees too and it should be a "blocker".
       
      mariadbd: /data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc:14921: int ha_innobase::info_low(uint, bool): Assertion `ib_table->stat_initialized()' failed.
      # 2025-03-07T07:03:03 [83763] #5  <signal handler called>
      # 2025-03-07T07:03:03 [83763] #6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
      # 2025-03-07T07:03:03 [83763] #7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
      # 2025-03-07T07:03:03 [83763] #8  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
      # 2025-03-07T07:03:03 [83763] #9  0x00007226de04526e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
      # 2025-03-07T07:03:03 [83763] #10 0x00007226de0288ff in __GI_abort () at ./stdlib/abort.c:79
      # 2025-03-07T07:03:03 [83763] #11 0x00007226de02881b in __assert_fail_base (fmt=0x7226de1d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55b92d6f4b1f "ib_table->stat_initialized()", file=file@entry=0x55b92d5f3618 "/data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc", line=line@entry=14921, function=function@entry=0x55b92d5f8d20 "int ha_innobase::info_low(uint, bool)") at ./assert/assert.c:94
      # 2025-03-07T07:03:03 [83763] #12 0x00007226de03b507 in __assert_fail (assertion=0x55b92d6f4b1f "ib_table->stat_initialized()", file=0x55b92d5f3618 "/data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc", line=14921, function=0x55b92d5f8d20 "int ha_innobase::info_low(uint, bool)") at ./assert/assert.c:103
      # 2025-03-07T07:03:03 [83763] #13 0x000055b92d1567f9 in ha_innobase::info_low (this=this@entry=0x72263011fb68, flag=flag@entry=282, is_analyze=<optimized out>, is_analyze@entry=false) at /data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc:14921
      # 2025-03-07T07:03:03 [83763] #14 0x000055b92d156d38 in ha_innobase::info (this=this@entry=0x72263011fb68, flag=flag@entry=282) at /data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc:15199
      # 2025-03-07T07:03:03 [83763] #15 0x000055b92d15ed18 in ha_innobase::open (this=0x72263011fb68, name=<optimized out>) at /data/Server/10.11-MDEV-29445G/storage/innobase/handler/ha_innodb.cc:6103
      # 2025-03-07T07:03:03 [83763] #16 0x000055b92cf25921 in handler::ha_open (this=0x72263011fb68, table_arg=table_arg@entry=0x722630103078, name=0x722634143198 "./test/t2", mode=2, test_if_locked=test_if_locked@entry=8210, mem_root=mem_root@entry=0x0, partitions_to_open=0x0) at /data/Server/10.11-MDEV-29445G/sql/handler.cc:3456
      # 2025-03-07T07:03:03 [83763] #17 0x000055b92cdaf523 in open_table_from_share (thd=thd@entry=0x722630000d58, share=share@entry=0x722634142b70, alias=alias@entry=0x7226300138a0, db_stat=db_stat@entry=33, prgflag=prgflag@entry=8, ha_open_flags=8210, outparam=<optimized out>, is_create_table=<optimized out>, partitions_to_open=<optimized out>) at /data/Server/10.11-MDEV-29445G/sql/table.cc:4495
      # 2025-03-07T07:03:03 [83763] #18 0x000055b92cc4beb5 in open_table (thd=thd@entry=0x722630000d58, table_list=table_list@entry=0x722630013858, ot_ctx=ot_ctx@entry=0x7226c0ecef80) at /data/Server/10.11-MDEV-29445G/sql/sql_base.cc:2231
      # 2025-03-07T07:03:03 [83763] #19 0x000055b92cc4d4ee in open_and_process_table (thd=thd@entry=0x722630000d58, tables=tables@entry=0x722630013858, counter=counter@entry=0x7226c0ecf084, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x7226c0ecf0a8, has_prelocking_list=has_prelocking_list@entry=false, ot_ctx=0x7226c0ecef80) at /data/Server/10.11-MDEV-29445G/sql/sql_base.cc:4164
      # 2025-03-07T07:03:03 [83763] #20 0x000055b92cc4f01f in open_tables (thd=thd@entry=0x722630000d58, options=..., start=start@entry=0x7226c0ecf068, counter=counter@entry=0x7226c0ecf084, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x7226c0ecf0a8) at /data/Server/10.11-MDEV-29445G/sql/sql_base.cc:4652
      # 2025-03-07T07:03:03 [83763] #21 0x000055b92cd79ac4 in open_tables (prelocking_strategy=0x7226c0ecf0a8, flags=0, counter=0x7226c0ecf084, tables=0x7226c0ecf068, thd=0x722630000d58) at /data/Server/10.11-MDEV-29445G/sql/sql_base.h:271
      # 2025-03-07T07:03:03 [83763] #22 mysql_alter_table (thd=thd@entry=0x722630000d58, new_db=new_db@entry=0x7226300058e8, new_name=0x722630005d50, create_info=create_info@entry=0x7226c0ed14b0, table_list=<optimized out>, table_list@entry=0x722630013858, recreate_info=recreate_info@entry=0x7226c0ed1300, alter_info=0x7226c0ed1340, order_num=0, order=0x0, ignore=false, if_exists=false) at /data/Server/10.11-MDEV-29445G/sql/sql_table.cc:10490
      # 2025-03-07T07:03:03 [83763] #23 0x000055b92cde9c85 in Sql_cmd_alter_table::execute (this=<optimized out>, thd=0x722630000d58) at /data/Server/10.11-MDEV-29445G/sql/sql_alter.cc:688
      # 2025-03-07T07:03:03 [83763] #24 0x000055b92ccbd5a3 in mysql_execute_command (thd=thd@entry=0x722630000d58, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/Server/10.11-MDEV-29445G/sql/sql_parse.cc:6167
      # 2025-03-07T07:03:03 [83763] #25 0x000055b92ccbe131 in mysql_parse (thd=thd@entry=0x722630000d58, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7226c0ed2400) at /data/Server/10.11-MDEV-29445G/sql/sql_parse.cc:8188
      # 2025-03-07T07:03:03 [83763] #26 0x000055b92ccbf79d in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x722630000d58, packet=packet@entry=0x7226300c7dc9 " ALTER TABLE t2 MODIFY col_string VARCHAR(19) CHARACTER SET latin1 COLLATE latin1_bin, ALGORITHM = NOCOPY, LOCK = SHARED  /* E_R Thread5 QNO 18370 CON_ID 607 */ ", packet_length=packet_length@entry=161, blocking=blocking@entry=true) at /data/Server/10.11-MDEV-29445G/sql/sql_parse.cc:1905
      # 2025-03-07T07:03:03 [83763] #27 0x000055b92ccc0c3b in do_command (thd=thd@entry=0x722630000d58, blocking=blocking@entry=true) at /data/Server/10.11-MDEV-29445G/sql/sql_parse.cc:1418
      # 2025-03-07T07:03:03 [83763] #28 0x000055b92cde29af in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55b92f2e1ca8, put_in_cache=put_in_cache@entry=true) at /data/Server/10.11-MDEV-29445G/sql/sql_connect.cc:1386
      # 2025-03-07T07:03:03 [83763] #29 0x000055b92cde2bc0 in handle_one_connection (arg=0x55b92f2e1ca8) at /data/Server/10.11-MDEV-29445G/sql/sql_connect.cc:1298
      # 2025-03-07T07:03:03 [83763] #30 0x00007226de09ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
      # 2025-03-07T07:03:03 [83763] #31 0x00007226de129c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      Query: ALTER TABLE t2 MODIFY col_string VARCHAR(19) CHARACTER SET latin1 COLLATE latin1_bin, ALGORITHM = NOCOPY, LOCK = SHARED
       
      sdp:/data/results/1741351360/TBR-2232-MDEV-36227$ gdb -c ./1/data/core /data/Server_bin/10.11-MDEV-29445G_debug_Og/bin/mariadbd
      
      

      Attachments

        Issue Links

          Activity

            People

              mleich Matthias Leich
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 2.5h
                  1d 2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.