MDEV-36257: Fix a debug assertion

ha_innobase::info_low(): Assert that dict_table_t::stat_initialized()
only within the critical section.  Changes of this field should be
protected by dict_table_t::lock_latch.